@@ -27,7 +27,6 @@ Name_Repository (dir, update_dir)
     char repos[PATH_MAX];
     char path[PATH_MAX];
     char tmp[PATH_MAX];
-    char cvsadm[PATH_MAX];
     char *cp;
 
     if (update_dir && *update_dir)
@@ -36,45 +35,41 @@ Name_Repository (dir, update_dir)
 	xupdate_dir = ".";
 
     if (dir != NULL)
-	(void) sprintf (cvsadm, "%s/%s", dir, CVSADM);
-    else
-	(void) strcpy (cvsadm, CVSADM);
-
-    /* sanity checks */
-    if (!isdir (cvsadm))
-    {
-	error (0, 0, "in directory %s:", xupdate_dir);
-	error (1, 0, "there is no version here; do '%s checkout' first",
-	       program_name);
-    }
-
-    if (dir != NULL)
-	(void) sprintf (tmp, "%s/%s", dir, CVSADM_ENT);
-    else
-	(void) strcpy (tmp, CVSADM_ENT);
-
-    if (!isreadable (tmp))
-    {
-	error (0, 0, "in directory %s:", xupdate_dir);
-	error (1, 0, "*PANIC* administration files missing");
-    }
-
-    if (dir != NULL)
 	(void) sprintf (tmp, "%s/%s", dir, CVSADM_REP);
     else
 	(void) strcpy (tmp, CVSADM_REP);
-
-    if (!isreadable (tmp))
-    {
-	error (0, 0, "in directory %s:", xupdate_dir);
-	error (1, 0, "*PANIC* administration files missing");
-    }
 
     /*
      * The assumption here is that the repository is always contained in the
      * first line of the "Repository" file.
      */
-    fpin = open_file (tmp, "r");
+    fpin = fopen (tmp, "r");
+
+    if (fpin == NULL)
+    {
+	int save_errno = errno;
+	char cvsadm[PATH_MAX];
+
+	if (dir != NULL)
+	    (void) sprintf (cvsadm, "%s/%s", dir, CVSADM);
+	else
+	    (void) strcpy (cvsadm, CVSADM);
+
+	if (!isdir (cvsadm))
+	{
+	    error (0, 0, "in directory %s:", xupdate_dir);
+	    error (1, 0, "there is no version here; do '%s checkout' first",
+		   program_name);
+	}
+
+	if (existence_error (save_errno))
+	{
+	    error (0, 0, "in directory %s:", xupdate_dir);
+	    error (1, 0, "*PANIC* administration files missing");
+	}
+
+	error (1, save_errno, "cannot open %s", tmp);
+    }
 
     if (fgets (repos, PATH_MAX, fpin) == NULL)
     {
@@ -107,15 +102,6 @@ Name_Repository (dir, update_dir)
 	}
 	(void) strcpy (path, repos);
 	(void) sprintf (repos, "%s/%s", CVSroot_directory, path);
-    }
-#ifdef CLIENT_SUPPORT
-    if (!client_active && !isdir (repos))
-#else
-    if (!isdir (repos))
-#endif
-    {
-	error (0, 0, "in directory %s:", xupdate_dir);
-	error (1, 0, "there is no repository %s", repos);
     }
 
     /* allocate space to return and fill it in */
