@@ -1,3 +1,10 @@
+Mon Jul 15 18:26:56 1996  Ian Lance Taylor  <ian@cygnus.com>
+
+	* recurse.c (do_recursion): Require a repository before calling
+	Find_Names.
+	* repos.c (Name_Repository): Remove sanity checks which spend time
+	examining the filesystem.
+
 Mon Jul 15 1996  Jim Kingdon  <kingdon@cyclic.com>
 
 	* client.c (send_file_names): Send file names as they appear
